Listo eliminar perfiles.  Falta validación con el PO respecto a la interfaz.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Perfil/Borrar.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayFor(modelItem => item.Nombre)
         </td>
         <td>
-            @Html.ActionLink("Borrar", "ConfirmarBorrado", new { id=item.Nombre })
+            @Html.ActionLink("Borrar", "ConfirmarBorrado", new { id = item.Nombre }, new { @class = "btn btn-default" })
         </td>
     </tr>
 }
