CommitActividadSupervisada7: Funcionalidad para AsignarPeriodo(no completada)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarPeriodo/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarPeriodo/Index.cshtml
@@ -41,6 +41,8 @@
                             <!-- Despliega los datos de los grupos usando un template personalizado: ElegirGrupoEditorTemplate -->
                             @Html.EditorFor(model => Model.Grupos)
                             @Html.EditorFor(model => Model.Formularios)
+
+                            @*@Html.DisplayFor(Model => Model.Formularios)*@
                         </tbody>
                     </table>
                 </div>
