--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/LlenarFormulario/Index.cshtml
@@ -33,7 +33,7 @@
                 Formulario
             </th>
         </tr>
-            <!-- Despliega los datos de los grupos usando un template personalizado: ElegirGrupoEditorTemplate -->
+            <!-- Despliega los cursos eh los que esta matriculado el estudiante-->
             @foreach (var item in Model.gruposMatriculado)
             {
                 <tr>
