Implementacion de la vista en los controladores y los modelos.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -186,7 +186,7 @@
 </div>
 <div class="row" id="ConformadosID">
 
-    @Html.Partial("ConformadoVParcial", Model.Conformados)
+    @Html.Partial("FormularioVParcial", Model.Conformados)
 
 </div>
 
