Arreglo de la vista de asignarPreguntas.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -185,14 +185,14 @@
     </div>
 </div>
 
-<div class="row">
+@*<div class="row">
     @Html.Action("SeccionesAsignadas", new
                     {CodForm = Model.Formulario.CodigoFormulario})
-</div>
+</div>*@
 
 <div class="row" id="ConformadosID">
 
-    @Html.Partial("FormularioVParcial", Model.Conformados)
+    @Html.Partial("VistaFormularioVParcial", Model.Conformados)
 
 </div>
 
