--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -162,37 +162,33 @@
     <!-- Modal -->
     <div id="modalReporte" class="modal fade" role="dialog">
 
-       @using (Html.BeginForm("Asignar", "AsignarFormularios", FormMethod.Post))
-        {
+        <div class="modal-dialog" style="height:73vh; width:73vw;">
 
-            <div class="modal-dialog" style="height:73vh; width:73vw;">
+            <!-- Modal content-->
+            <div class="modal-content">
 
-                <!-- Modal content-->
-                <div class="modal-content">
-
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Asignaciones de formularios por realizar</h4>
-                    </div>
-
-                    <div class="modal-body">
-                        <div id="asign-content" style="height:70vh; width:70vw;">
-                            @Html.Partial("AsignacionFormularioGrupo", Model.GruFormsSeleccionados)
-                        </div>
-                    </div>
-
-                    <div class="modal-footer" align="center">
-                        <button type="button" id="boton-efectuar" class="btn btn-default">Efectuar asignaciones</button>
-                        <span> </span>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                    </div>
-
-                    <input type="submit" style="display:none" id="efectuar" value="EFECTUAR ASIGNACIONES"/>
-
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Asignaciones de formularios por realizar</h4>
                 </div>
 
+                <div class="modal-body">
+                    <div id="asign-content" style="height:70vh; width:70vw;">
+                        @Html.EditorFor(Model => Model.GruFormsSeleccionados, "~/Views/Shared/AsignacionFormularioGrupos.cshtml")
+                    </div>
+                </div>
+
+                <div class="modal-footer" align="center">
+                    <button type="button" id="boton-efectuar" class="btn btn-default">Efectuar asignaciones</button>
+                    <span> </span>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                </div>
+
+                <input type="submit" style="display:none" id="efectuar" value="EFECTUAR ASIGNACIONES"/>
+
             </div>
-        }
+
+        </div>
 
     </div>
 
