--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -32,7 +32,7 @@
     <div class="form-group">
         @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione")
+            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes : new { @class = "form-control" } )
             <input type="submit" value="Agregar Opciones" class="btn btn-secondary" p id="botonAsignarOpciones" onclick="accionBotonAgregarOpciones()" />
             @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
         </div>
@@ -51,7 +51,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.NombreCategoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.NombreCategoria, new SelectList(ViewBag.NombreCategoria, "Value", "Text"), "Seleccione")
+            @Html.DropDownListFor(model => model.NombreCategoria, new SelectList(ViewBag.NombreCategoria, "Value", "Text"), "Seleccione",  htmlAttributes : new { @class = "form-control" } )
             @Html.ValidationMessageFor(model => model.NombreCategoria, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -60,13 +60,13 @@
     <div class="form-group">
         @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione")
+            @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione",  htmlAttributes : new { @class = "form-control" } )
             @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
         </div>
     </div>
 
 
-    <div class="form-group">
+    <div class="form-group" ng-switch="" >
         @Html.Label("Etiqueta Observación", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.EtiquetaObservacion, new { htmlAttributes = new { @class = "form-control", @maxlength = "25" } })
