--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -179,6 +179,7 @@
 
 
 </div>
+
 <div class="row form-group">
     <div class="col-sm-12 text-center">      
         <button id="btnSave" class="btn btn-secondary m-*-auto"><span class="oi oi-arrow-left"></span> Asignar pregunta</button>
@@ -190,12 +191,34 @@
                     {CodForm = Model.Formulario.CodigoFormulario})
 </div>*@
 
-<div class="row" id="ConformadosID">
+@*<div class="row" id="ConformadosID">
 
-    @Html.Partial("VistaFormularioVParcial", Model.Conformados)
+    @Html.Action("VistaFormularioVParcial", new { codForm = Model.Formulario.CodigoFormulario })
 
+</div>*@
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+    Vista Previa
+</button>
+
+<div class="modal fade" id="modalVistaPrevia" tabindex="-1" role="dialog" aria-labelledby="modalVistaPrevia" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modalVistaPrevia"> <br> Vista previa </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                @Html.Partial("VistaFormularioVParcial", Model.Conformados)
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
-
 
 
 
