--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -125,8 +125,8 @@
                                                     <script>
                                                         $.ajax({
                                                             type: "POST",
-                                                            url: "/VisualizarFormulario/GraficoPie/?itemId=@seccion.Item.ItemId",
-                                                            //data{ itemId: @seccion.Item.ItemId },
+                                                            url: "/VisualizarFormulario/GraficoPie",//?itemId=@seccion.Item.ItemId",
+                                                            data: "{ 'itemId': '@seccion.Item.ItemId', 'codFormulario': '@seccion.CodigoFormulario' }",
                                                             contentType: "application/json; charset=utf-8",
                                                             dataType: "json",
                                                             success: function (chData) {
