Se muestran las observaciones en pantalla (falta acomodarlas)

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/VisualizarFormulario/Details.cshtml
@@ -70,7 +70,7 @@
     }
 
 
-    @{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = ""; List<string> secciones = new List<string>(); bool seccion_repetida = false;}
+    @{int id_counter = 0; int seccion_counter = 0; bool? observation = true; string seccion_actual = ""; string item_actual = "";  List<string> secciones = new List<string>(); bool seccion_repetida = false;}
 
     <div class="panel-group" id="accordion1">
 
@@ -119,7 +119,7 @@
 
                                                     @if (seccion.Item.TipoPregunta != 1)
                                                     {
-                                                        <p>Resultados</p> @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
+                                                        @*Aqui se ingresa el grafico y desde aqui se mostrarian las observaciones posteriormente, acordarse de ponder una condicion si el tipo de pregunta posee grafico o no*@
                                                         //<p>@("graficarResultados('@seccion.Item.ItemId')")</p>
                                                         <p id="info_@item_actual" style="float:right"></p>
                                                         <div id="contenedorGrafo">
@@ -193,7 +193,7 @@
                                                     else
                                                     {
                                                         <div style="height:180px; overflow-y: scroll;">
-                                                           
+
                                                             @foreach (var item in Model.Formulario_Respuesta)
                                                             {
                                                                 <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
@@ -205,64 +205,57 @@
                                                     <br />
                                                     <div class="panel-group" id="accordion3_@seccion_counter">
 
-                                                        @if (seccion.Item.TieneObservacion == observation)
-                                                        {
-                                                            <div class="panel panel-default">
-                                                                <div class="panel-heading">
-                                                                    <h4 class="panel-title">
-                                                                        <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
-                                                                            Observaciones @*Aqui se muestran las observaciones relacionadas a una preguntas*@
-                                                                        </a>
-                                                                    </h4>
-                                                                </div>
-                                                                <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
-                                                                    <div class="panel-body">
-                                                                        <div style="height:200px; overflow-y: scroll;">
-                                                                            <p id="info_@item_actual" style="float:right"></p>
-                                                                            @foreach (var item in Model.Formulario_Respuesta.Take(1))
-                                                                            {
-                                                                                <script>
-                                                    $.ajax({
-                                                        type: "POST",
-                                                            url: "/VisualizarFormulario/ObservacionesPorPregunta",
-                                                            data: {
-                                                                codigoFormulario: @item.CodigoFormulario;
-                                                                cedulaProfesor: @item.Profesor.CedulaProfesor;
-                                                                annoGrupo: @item.Grupo.AnnoGrupo;
-                                                                semestreGrupo: @item.Grupo.SemestreGrupo;
-                                                                numeroGrupo: @item.Grupo.Numero;
-                                                                siglaCurso: @item.Grupo.SiglaCurso;
-                                                                itemId: @seccion.Item.ItemId;
-                                                            },
-                                                            contentType: "application/json; charset=utf-8",
-                                                            dataType: "json",
-                                                        success: function (chData) {
-                                                            var aData = chData;
-                                                            var obs = aData[0];
-                                                            //var nom = aData[1];
-                                                            //var ap1 = aData[2];
-                                                            //var ap2 = aData[3];
 
-                                                            for (var data in obs) {
-                                                                document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerText + "Cantidad de Estudiantes que respondieron: \n" + (obs[data]).toString();
-                                                            }
 
-                                                        }
-                                                    });
-                                                                                </script>
+                                                            @if (seccion.Item.TieneObservacion == observation)
+                                                            {
+                                                                <div class="panel panel-default">
+                                                                    <div class="panel-heading">
+                                                                        <h4 class="panel-title">
+                                                                            <a data-toggle="collapse" data-parent="#accordion3_@seccion_counter" href="#collapseThreeTwo_@seccion_counter">
+                                                                                Observaciones @*Aqui se muestran las observaciones relacionadas a una preguntas*@
+                                                                            </a>
+                                                                        </h4>
+                                                                    </div>
+                                                                    <div id="collapseThreeTwo_@seccion_counter" class="panel-collapse collapse">
+                                                                        <div class="panel-body">
+                                                                            <div style="height:200px; overflow-y: scroll;">
+                                                                                <p id="info_@item_actual" style="float:right"></p>
 
-                                                                                <p>Respuesta de estudiante, texto para verificar que el tamanno para el cuadro de texto sea apropiado, lo cual indica que se pueda ver la suficiente informacion, a la vez que no se consuma mucho espacio en pantalla y evite al usuario concentrase en la respuesta de una pregunta. Tambien para comprobar con los companneros de equipo que les parece y si creen que el tamanno deber ser mas grande o mas pequenno, ya que se tiene que tomar un promedio del tamanno de una respuesta de un estudiante.</p>
-                                                                                <hr>
+                                                                                @foreach (var item in Model.Formulario_Respuesta.Take(1))
+                                                                                {
+                                                                                    <script>
+                                                                                    $.ajax({
+                                                                                        type: "POST",
+                                                                                        url: "/VisualizarFormulario/ObservacionesPorPregunta",
+                                                                                        data: "{ 'codigoFormulario': '@item.CodigoFormulario', 'cedulaProfesor': '@item.Profesor.CedulaProfesor', 'annoGrupo': '@item.Grupo.AnnoGrupo', 'semestreGrupo': '@item.Grupo.SemestreGrupo', 'numeroGrupo': '@item.Grupo.Numero', 'siglaCurso': '@item.Grupo.SiglaCurso', 'itemId': '@seccion.Item.ItemId' }" ,
+                                                                                        contentType: "application/json; charset=utf-8",
+                                                                                        dataType: "json",
+                                                                                        success: function (chData) {
+                                                                                        var aData = chData;
+                                                                                        var obs = aData[0];
+                                                                                        //var nom = aData[1];
+                                                                                        //var ap1 = aData[2];
+                                                                                        //var ap2 = aData[3];
+
+
+                                                                                            for (var data in obs) {
+                                                                                                document.getElementById("info_@item_actual").innerHTML = document.getElementById("info_@item_actual").innerHTML + (obs[data]).toString();
+                                                                                            }
+                                                                                                }
+                                                                                            });
+                                                                                    </script>
+                                                                                }
 
                                                                                 @*Se ocupa encontrar la forma de devolver las observaciones por pregunta*@
-                                                                            }
-                                                                        </div>
 
+                                                                            </div>
+
+                                                                        </div>
                                                                     </div>
                                                                 </div>
-                                                            </div>
-                                                        }
-
+                                                            }
+                                                        
 
                                                     </div>
                                                 </div>
