cambio en la view de seccion para que no tenga el botón del details

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Seccion/Index.cshtml
@@ -37,7 +37,7 @@
         </td>
         <td>
 @*            @Html.ActionLink("Edit", "Edit", new { id = item.Titulo }) |*@
-            @Html.ActionLink("Details", "Details", new { id = item.Titulo }) |
+            @*@Html.ActionLink("Details", "Details", new { id = item.Titulo }) |*@
             @*@Html.ActionLink("Delete", "Delete", new { id = item.Titulo })*@
         </td>
     </tr>
