--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -197,7 +197,7 @@
 
 </div>*@
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
+ <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalVistaPrevia">
     Vista Previa
 </button>
 
@@ -205,7 +205,7 @@
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="modalVistaPrevia"> <br> Vista previa </h5>
+                <h5 class="modal-title" id="modalVistaPrevia"> <b> Vista previa </b> </h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
