--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -102,7 +102,7 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_SECCIONES))
                                 {
-                                    <li>@Html.ActionLink("Sección", "Index", "Seccion")</li>
+                                    <li>@Html.ActionLink("Insertar Secciones", "Index", "Seccion")</li>
                                 }
                                 else
                                 {
@@ -111,7 +111,7 @@
 
                                 if (permisos_usuario.verificar_permiso("SC-01234", 0, IdPermiso.VER_ITEMS))
                                 {
-                                    <li>@Html.ActionLink("Ítem", "Index", "Item")</li>
+                                    <li>@Html.ActionLink("Insertar Items", "Index", "Item")</li>
                                 }
                                 else
                                 {
