--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Item/Create.cshtml
@@ -32,8 +32,7 @@
     <div class="form-group">
         @Html.Label("Tipo Pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes : new { @class = "form-control" } )
-            <input type="submit" value="Agregar Opciones" class="btn btn-secondary" p id="botonAsignarOpciones" onclick="accionBotonAgregarOpciones()" />
+            @Html.DropDownListFor(model => model.TipoPregunta, new SelectList(ViewBag.TipoPreguntaItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.TipoPregunta, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -51,7 +50,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.NombreCategoria, "Categoría", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.NombreCategoria, new SelectList(ViewBag.NombreCategoria, "Value", "Text"), "Seleccione",  htmlAttributes : new { @class = "form-control" } )
+            @Html.DropDownListFor(model => model.NombreCategoria, new SelectList(ViewBag.NombreCategoria, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.NombreCategoria, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -60,13 +59,13 @@
     <div class="form-group">
         @Html.Label("Tiene Observación", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione",  htmlAttributes : new { @class = "form-control" } )
+            @Html.DropDownListFor(model => model.TieneObservacion, new SelectList(ViewBag.BooleanItems, "Value", "Text"), "Seleccione", htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.TieneObservacion, "", new { @class = "text-danger" })
         </div>
     </div>
 
 
-    <div class="form-group" ng-switch="" >
+    <div class="form-group" ng-switch="">
         @Html.Label("Etiqueta Observación", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.EtiquetaObservacion, new { htmlAttributes = new { @class = "form-control", @maxlength = "25" } })
@@ -74,6 +73,10 @@
         </div>
     </div>
 
+    <div class="fomr-group" id="opciones" style="display:none;">
+        <input type="button" value="Agregar Opciones" class="btn btn-secondary" p id="botonAsignarOpciones" onclick="accionBotonAgregarOpciones()" />
+        @Html.Partial("AgregarOpcionesVParcial")
+    </div>
 
     @* Creacion de botones en la misma linea y con color gris *@
     <div class="form-group">
@@ -88,7 +91,7 @@
     <script>
         function accionBotonAgregarOpciones()
         {
-            document.location = '@Url.Action("AgregarOpciones")';
+            document.getElementById('opciones').innerHTML = "@Html.Partial("AgregarOpcionesVParcial")";
         }
     </script>
 
